<resources>
    <string name="app_name">NFCBeta</string>
    <string name="nrf_tag">NRF TAG</string>
    <string name="temp">temp</string>
    <string name="test">test</string>
    <string name="humi">humi</string>
    <string name="setear_ip">Setear IP</string>
    <string name="puerto">Puerto</string>
    <string name="entrar">entrar</string>
    <string name="_192_168_43_133">192.168.43.133</string>
    <string name="_3996">3996</string>
    <string name="recibir_farenheit">recibir farenheit</string>
    <string name="_192_168_0_122">192.168.0.122</string>
    <string name="escanear_codigo_de_barras">escanear codigo de barras</string>
    <string name="_192_168_1_4">192.168.1.4</string>
    <string name="valor_devuelto_por_webservice">Valor devuelto por webservice</string>
    <string name="formato_de_qr">formato de qr</string>
    <string name="contenido_del_qr">contenido del qr</string>
    <string name="url">URL</string>
    <string name="http_192_168_0_1_webservice_asmx">http://192.168.0.1/WebService.asmx</string>
    <string name="idstadio">idStadio</string>
    <string name="_12">12</string>
    <string name="puerta">Puerta</string>
    <string name="_1">1</string>
    <string name="country_prompt">Estadio:</string>
    <string name="estadio">Estadio</string>
    <string name="numero_de_estadio">numero de estadio</string>
    <string name="contenido">contenido</string>
    <string name="resultado">resultado</string>
    <string name="convertir">convertir</string>
    <string name="introducir_pedido">introducir pedido</string>
    <string name="id_socio">ID SOCIO</string>
    <string name="nfc_tag">NFC TAG</string>
    <string name="tag_aqui">tag aqui</string>
    <string name="enviar_nfc">Enviar NFC</string>
    <string name="enviar_nfc_invitado">Enviar NFC Invitado</string>
    <string name="enviar_id_socio">Enviar ID SOCIO</string>
    <string name="formato">Formato</string>
    <string name="enviar">enviar</string>
    <string name="verif_servidor">VERIFICAR SERVIDOR</string>
    <string name="asd">asd</string>
    <string name="asda">asd</string>
    <string name="pedir_foto">pedir foto</string>
    <string name="fotosocio">fotosocio</string>
    <string name="asdaa">asd</string>
    <string name="_2">2</string>
    <string name="estado">estado</string>
    <string name="introducir_pedido_soap">Introducir pedido soap</string>
    <string name="alo">alo</string>
    <string name="volver">volver</string>
    <string name="documento_dni">Documento (DNI)</string>
    <string name="idsocio">IDSOCIO</string>
    <string name="asdada">asd</string>
    <string name="asdasd">asdasd</string>
    <string name="sdfthdsfth">sdfthdsfth</string>
    <string-array name="country_arrays">
        <item>Seleccionar</item>
        <item>Argentinos Jrs.</item>
        <item>BVip Estadio Argentinos Jrs.</item>
        <item>BVip Estadio Gualeguaychu</item>
        <item>BVip Estadio Newells</item>
        <item>BVip Estadio Quilmes</item>
        <item>BVip Estadio Racing</item>
        <item>BVip Estadio Tigre</item>
        <item>BVip Estadio Vendimia</item>
        <item>BVip Monumental - River</item>
        <item>BVip Pepsi Music</item>
        <item>BVip Quilmes Rock 2013</item>
        <item>BVip TC2000</item>
        <item>Colon</item>
        <item>Control</item>
        <item>Estudiantes</item>
        <item>Newells Old Boys</item>
        <item>Patronato</item>
        <item>Quilmes</item>
        <item>Racing</item>
        <item>River</item>
        <item>River, el posta</item>
        <item>San Lorenzo</item>
        <item>Tigre</item>
    </string-array>
    <string name="action_settings">settings</string>
    <string name="menu_main">menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="informacion">informacion</string>
    <string name="asas">ASas</string>
    <string name="puertas">Puertas</string>
    <string name="leer">LEER</string>
    <string name="login">Login</string>
    <string name="ip">IP:</string>
    <string name="_192_168_0_1">192.168.0.1</string>
    <string name="puertogf">Puerto:</string>
    <string name="_80">80</string>
    <string name="entrarcf">Entrar</string>
    <string name="tarjeta_no_reconocida">Tarjeta no reconocida</string>
    <string name="tarjeta_no_ingresada_en_el_sistema">Tarjeta no ingresada en el sistema</string>
    <string name="estado_acceso">Estado Acceso</string>
    <string name="ultima_cuota_paga">Ultima Cuota Paga: -</string>
    <string name="socio">Socio</string>
    <string name="invitado">INVITADO</string>
    <string name="id">ID</string>
    <string name="documento">Documento</string>
    <string name="cargando">CARGANDO</string>
    <string name="enviar_id_invitado">Enviar ID Invitado</string>
    <string name="consultar">CONSULTAR</string>
    <string name="leer_qr">LEER QR</string>
</resources>
