<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundapp"
    tools:context="com.consilia.nfcbeta.loginActivity">

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView7"
        android:textSize="36sp"
        android:typeface="sans"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/verdeboleteria" />

    <TextView
        android:text="@string/ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/ip"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:textColor="@color/verdeboleteria"
        android:textSize="24sp"
        android:layout_toEndOf="@+id/textView9"
        android:text="@string/_192_168_0_1"
        android:textAlignment="center"
        android:layout_toRightOf="@+id/textView9" />

    <TextView
        android:text="@string/puertogf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/port"
        android:textColor="@color/verdeboleteria"
        android:textSize="24sp"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:text="@string/_80"
        android:textAlignment="center" />

    <Button
        android:text="@string/entrarcf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ENTRAR"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:textColor="@color/gris"
        android:textStyle="normal|bold"
        android:textSize="20sp" />
</RelativeLayout>
