<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.consilia.nfcbeta.ConfigActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadio"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"
        android:typeface="normal" />

    <Spinner
        android:id="@+id/Estadio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:entries="@array/country_arrays"
        android:prompt="@string/country_prompt"
        android:spinnerMode="dropdown"
        android:layout_weight="0.12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puerta"
        android:singleLine="true"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etstadio"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/bentrar"
        android:layout_gravity="center_horizontal"
        android:onClick="bentrar"
        android:textSize="30sp" />

</LinearLayout>
