<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.consilia.nfcbeta.NfcActivity">


    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nfc_tag"
                        android:id="@+id/textView"
                        android:textSize="40sp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/text"
                        android:textSize="30sp"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enviar_nfc"
                        android:id="@+id/bvolver"
                        style="@style/Widget.AppCompat.Button.Colored" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/id_socio"
                        android:id="@+id/textView5"
                        android:textSize="40sp"
                        android:layout_gravity="center_horizontal" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/idsocio"
                            android:id="@+id/buttonsocio"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0"
                            android:checked="false"
                            android:textSize="20sp"
                            android:onClick="onRadioButtonClicked" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/documento_dni"
                            android:id="@+id/buttondni"
                            android:layout_gravity="right"
                            android:layout_weight="0"
                            android:checked="false"
                            android:textSize="20sp"
                            android:onClick="onRadioButtonClicked" />

                    </RadioGroup>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/edtsocio"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:maxLines="1"
                        android:layout_weight="0" />
                    <Button
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enviar_id_socio"
                        android:id="@+id/bidsocio" />

                </LinearLayout>


            </FrameLayout>
        </LinearLayout>
    </TabHost>


</LinearLayout>
